--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,8 @@ version: 2.1
 
 commands:
   print_pipeline_id:
-    type: string
     steps:
-      - run: echo ${CIRCLE_WORKFLOW_ID}
+      - run: echo "this workflow ID: $CIRCLE_WORKFLOW_ID"
 
 workflows:
   version: 2
