--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 commands:
   print_pipeline_id:
     steps:
-      - run: echo "this workflow ID: $CIRCLE_WORKFLOW_ID"
+      - run: echo "$CIRCLE_WORKFLOW_ID"
 
 workflows:
   version: 2
