--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,8 @@ workflows:
           # without ordering jobs, workspace is not filled when attached and no errors if workspace is empty
           requires:
             - save_hello_world_output
+      - failing_on_pupose
+      - act_on_failer
 
 jobs:
   build:
@@ -75,3 +77,16 @@ jobs:
       - run:
           command: |
             cat ./workspace/output.txt
+
+  failing_on_pupose:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - run: return 1  # returning somting other than 0
+
+  act_on_failer:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - run: echo "Hello Error!"
+    when: on_fail
