dignose on-failer fix 01

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,5 +88,6 @@ jobs:
     docker:
       - image: cimg/base:stable
     steps:
-      - run: echo "Hello Error!"
-    when: on_fail
+      - run:
+          command: echo "Hello Error!"
+          when: on_fail
