--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,7 +82,7 @@ jobs:
     docker:
       - image: cimg/base:stable
     steps:
-      - run: return 1  # returning somting other than 0
+      - run: exit 1  # returning somting other than 0
       - run:
           when: on_fail
           command: |
